; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ov511.c_reg_r.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ov511.c_reg_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_ov511 = type { i64, i32*, i32, i32 }

@BCL_OV518 = common dso_local global i64 0, align 8
@USB_DIR_IN = common dso_local global i32 0, align 4
@USB_TYPE_VENDOR = common dso_local global i32 0, align 4
@USB_RECIP_DEVICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"reg read: error %d: %s\00", align 1
@urb_errlist = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"0x%02X:0x%02X\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_ov511*, i8)* @reg_r to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reg_r(%struct.usb_ov511* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.usb_ov511*, align 8
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  store %struct.usb_ov511* %0, %struct.usb_ov511** %3, align 8
  store i8 %1, i8* %4, align 1
  %6 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %7 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %6, i32 0, i32 2
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %10 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %13 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @usb_rcvctrlpipe(i32 %14, i32 0)
  %16 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %17 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @BCL_OV518, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i64
  %22 = select i1 %20, i32 1, i32 3
  %23 = load i32, i32* @USB_DIR_IN, align 4
  %24 = load i32, i32* @USB_TYPE_VENDOR, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @USB_RECIP_DEVICE, align 4
  %27 = or i32 %25, %26
  %28 = load i8, i8* %4, align 1
  %29 = zext i8 %28 to i32
  %30 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %31 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %30, i32 0, i32 1
  %32 = load i32*, i32** %31, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  %34 = call i32 @usb_control_msg(i32 %11, i32 %15, i32 %22, i32 %27, i32 0, i32 %29, i32* %33, i32 1, i32 1000)
  store i32 %34, i32* %5, align 4
  %35 = load i32, i32* %5, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %2
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* @urb_errlist, align 4
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @symbolic(i32 %39, i32 %40)
  %42 = call i32 @err(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %38, i32 %41)
  br label %56

43:                                               ; preds = %2
  %44 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %45 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %44, i32 0, i32 1
  %46 = load i32*, i32** %45, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 0
  %48 = load i32, i32* %47, align 4
  store i32 %48, i32* %5, align 4
  %49 = load i8, i8* %4, align 1
  %50 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %51 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %50, i32 0, i32 1
  %52 = load i32*, i32** %51, align 8
  %53 = getelementptr inbounds i32, i32* %52, i64 0
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @PDEBUG(i32 5, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8 zeroext %49, i32 %54)
  br label %56

56:                                               ; preds = %43, %37
  %57 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %58 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %57, i32 0, i32 2
  %59 = call i32 @mutex_unlock(i32* %58)
  %60 = load i32, i32* %5, align 4
  ret i32 %60
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @usb_rcvctrlpipe(i32, i32) #1

declare dso_local i32 @err(i8*, i32, i32) #1

declare dso_local i32 @symbolic(i32, i32) #1

declare dso_local i32 @PDEBUG(i32, i8*, i8 zeroext, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
